# talent-plan

courses/rust/building-blocks/bb-3-exe/: Cargo.toml
courses/rust/building-blocks/bb-3-exe/src/: lib.rs
courses/rust/my_projects/project1-kvs/: Cargo.toml
courses/rust/my_projects/project1-kvs/src/: lib.rs
courses/rust/my_projects/project2-kvs/: Cargo.toml
courses/rust/my_projects/project2-kvs/src/: kv.rs  lib.rs
courses/rust/my_projects/project2-kvs/tests/: test.rs
