[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["wujs wujs@foxmail.com"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.6"
clap = { version = "4.0.22", features = ["cargo"] }
predicates = "2.1.2"
